@@ -3,38 +3,11 @@ package com.ll.gramgram.standard.util;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
-import java.security.MessageDigest;
-import java.security.NoSuchAlgorithmException;
-import java.util.Base64;
 
 public class Ut {
-    public static class hash {
-        private static final MessageDigest md;
-
-        static {
-            try {
-                md = MessageDigest.getInstance("SHA-256");
-            } catch (NoSuchAlgorithmException e) {
-                throw new RuntimeException(e);
-            }
-        }
-
-        public static String sha256(String str) {
-            // Convert the input string to bytes and update the MessageDigest
-            byte[] inputBytes = str.getBytes(StandardCharsets.UTF_8);
-            byte[] hashBytes = md.digest(inputBytes);
-
-            // Convert the hashed bytes to a Base64 encoded string
-            return Base64.getEncoder().encodeToString(hashBytes);
-        }
-    }
     public static class url {
         public static String encode(String str) {
-            try {
-                return URLEncoder.encode(str, "UTF-8");
-            } catch (UnsupportedEncodingException e) {
-                return str;
-            }
+            return URLEncoder.encode(str, StandardCharsets.UTF_8);
         }
 
         public static String modifyQueryParam(String url, String paramName, String paramValue) {
@@ -45,11 +18,11 @@ public class Ut {
         }
 
         public static String addQueryParam(String url, String paramName, String paramValue) {
-            if (url.contains("?") == false) {
+            if (!url.contains("?")) {
                 url += "?";
             }
 
-            if (url.endsWith("?") == false && url.endsWith("&") == false) {
+            if (!url.endsWith("?")&& !url.endsWith("&")) {
                 url += "&";
             }
 
